# ratchet

./: .gitignore  Cargo.toml  README.md  fun.plan  milestones.plan
.cargo/: config.toml
src/: lib.rs  main.rs
test/: test.pl
tests/: launch_and_ascii_auth.rs  launch_and_auth.rs  launch_and_db.rs  launch_and_db_reject.rs  launch_and_reject.rs  launch_and_unicode.rs  launch_and_wildcard_auth.rs
tests/resources/: .test.pl.swp  bigfast.sh  hammerit.pl  test.pl
